src/components/ui/accordion/style.module.scss
@import '@Src/styles/variables.scss';

.accordion {
  display: block;
}
.container {
  display: block;
  border: none;
  overflow: hidden;
  transition: all var(--transition-time);
}
.header {
  display: block;
  font-size: 1.125rem;
  color: var(--color-black);
  padding: 0.75rem 0;
  cursor: pointer;
}
.title {
  display: block;
}
.open .header {
  background: url('../../../assets/icons/arrow-top.svg') no-repeat right 1rem center;
}
.closed .header {
  background: url('../../../assets/icons/arrow-down.svg') no-repeat right 1rem center;
}

